<resources>
    <string name="app_name">DaCovid</string>
    <string name="title_activity_province">ProvinceActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_country">Enter the country...</string>
    <string name="anhui">Anhui</string>
    <string name="choose_the_province">Choose the province</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong">Something went wrong...</string>
    <string name="todays_data">Today\'s data</string>
    <string name="ubication">Ubication</string>
    <string name="confirmed">confirmed</string>
    <string name="deaths">deaths</string>
    <string name="recovered">recovered</string>
    <string name="could_not_load_the_map">Could not load the map</string>
    <string name="the_country_doesnt_exists">The country doesn\'t exists...</string>
    <string name="coming_soon">Coming soon... 😎 (tap to close)</string>
    <string name="see_more_data">See more data</string>
    <string name="title_activity_reports_chart">ReportsChartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="data">Data</string>
    <string name="all_data">All data</string>
    <string name="active">active</string>
    <string name="last_update">last update: </string>
    <string name="choose_another_date">Choose another date</string>
    <string name="data_from">Data from</string>
</resources>