<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.ReportsChartActivity"
    android:background="@color/app_background"
    android:id="@+id/activity_reports_chart_root">

    <com.ruben.covid_19_statistics_app.uicomponents.networkError.ErrorLayout
        android:id="@+id/activity_reports_chart_error_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_report_chart_wrapper"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/activity_reports_today_data_info_wrapper"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/activity_reports_chart_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/data_from"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/confirmed"
                    android:textSize="23dp"
                    android:textColor="@color/blue"
                    android:drawableLeft="@drawable/point_circle"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/blue"
                    />

                <TextView
                    android:id="@+id/activity_reports_chart_confirmed_cases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30dp"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:visibility="gone"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/deaths"
                    android:textSize="23dp"
                    android:textColor="@color/red"
                    android:drawableTint="@color/red"
                    android:drawableLeft="@drawable/point_circle"
                    android:drawablePadding="10dp"/>

                <TextView
                    android:id="@+id/activity_reports_chart_deaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30dp"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/recovered"
                    android:textSize="23dp"
                    android:textColor="@color/green"
                    android:drawableLeft="@drawable/point_circle"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/green"
                    />

                <TextView
                    android:id="@+id/activity_reports_chart_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30dp"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/active"
                    android:textSize="23dp"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/point_circle"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    />

                <TextView
                    android:id="@+id/activity_reports_chart_active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30dp"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/activity_reports_all_data_info_wrapper"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_reports_today_data_info_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/all_data"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/confirmed"
                    android:textSize="23dp"
                    android:textColor="@color/blue"
                    android:drawableLeft="@drawable/point_circle"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/blue"
                    />

                <TextView
                    android:id="@+id/activity_reports_chart_all_confirmed_cases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30dp"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/deaths"
                    android:textSize="23dp"
                    android:textColor="@color/red"
                    android:drawableTint="@color/red"
                    android:drawableLeft="@drawable/point_circle"
                    android:drawablePadding="10dp"/>

                <TextView
                    android:id="@+id/activity_reports_chart_all_deaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30dp"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/recovered"
                    android:textSize="23dp"
                    android:textColor="@color/green"
                    android:drawableLeft="@drawable/point_circle"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/green"
                    />

                <TextView
                    android:id="@+id/activity_reports_chart_all_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30dp"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/active"
                    android:textSize="23dp"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/point_circle"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    />

                <TextView
                    android:id="@+id/activity_reports_chart_all_active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30dp"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>